--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@apollo/react-hooks": "^3.1.5",
 		"apollo-boost": "^0.4.9",
+		"cep-promise": "^3.0.9",
 		"graphql": "^15.3.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
